--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,13 +1,23 @@
 <html>
-	<head>
-		{% if title %}
-		<title>{{title}} -microblog</title>
-		{% else %}
-		<title>welcome</title>
-		{% endif %}
-	</head>
-	<body>
-		<div>Microblog: <a href="/index">Home</a></div>
-		{%block content%}{%endblock%}
-	</body>
+  <head>
+    {% if title %}
+    <title>{{title}} - microblog</title>
+    {% else %}
+    <title>microblog</title>
+    {% endif %}
+  </head>
+  <body>
+    <div>Microblog: <a href="/index">Home</a></div>
+    <hr>
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <ul>
+    {% for message in messages %}
+        <li>{{ message }} </li>
+    {% endfor %}
+    </ul>
+    {% endif %}
+    {% endwith %}
+    {% block content %}{% endblock %}
+  </body>
 </html>
